# service_entityinfo

./: .coveragerc  .dockerignore  .env.schema  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  app.py  auth.py  config.py  docker-compose.yaml  docker-compose.yml  gunicorn_config.py  gunicorn_starter.sh  namespace.py  pyproject.toml  requirements.txt
api/: routes.py
api/api_attributes/: file_attributes.py  utils.py
api/api_files/: files.py  files_stats.py  files_v2.py  meta.py  utils.py
api/api_folders/: folders.py
api/api_manifest/: __init__.py  manifest.py  routes.py  service.py  utils.py
api/api_metrics/: system_metrics.py
api/api_project/: project.py
api/api_users/: users.py
api/api_workbench/: workbench.py
commons/logger_services/: namespace_declare.py
kubernetes/: deployment.yaml
models/: attributes.py  base_models.py  files.py  folders.py  manifest.py  manifest_sql.py  meta.py  metrics.py  metrics_sql.py  project.py  users.py  workbench.py  workbench_sql.py
resources/: error_handler.py  helpers.py
tests/: conftest.py  import_test.json  logger.py  prepare_test.py  pytest.ini  test_file_attributes.py  test_file_meta.py  test_file_statistics.py  test_file_v2.py  test_files.py  test_folders.py  test_manifest.py  test_project.py  test_requirements.txt  test_system_metrics.py  test_users.py  test_workbench.py
